hopefully fixes oversize on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-body {
   background-color: #17171E;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: center;
